--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# This file
+.gitignore
+
 # History files
 .Rhistory
 .Rapp.history
@@ -19,6 +22,8 @@
 
 # RStudio files
 .Rproj.user/
+*.Rproj
+*.Rmd
 
 # produced vignettes
 vignettes/*.html
